[build-system]
requires = [
    "setuptools >= 61.2"
]

[project]
name = "ebrick-fpga-cad"
authors = [{name = "Zero ASIC"}]
description = "Library containing proprietary RTL-to-bitstream and other CAD support for ebrick-fpga."
readme = "README.md"
urls = {Homepage = "https://github.com/zeroasiccorp/ebrick-fpga-cad"}
requires-python = ">= 3.8"
dependencies = [
    "autodocsumm",
    "siliconcompiler == 0.21.5",
    "sphinx",
    "sphinx-rtd-theme",
    "switchboard-hw == 0.0.38",
    "umi @ git+https://github.com/zeroasiccorp/umi@main"
]
license = {text = "Zero ASIC Proprietary"}
version = "0.0.2"

[project.optional-dependencies]
test = [
    "pytest == 8.1.1",
    "pytest-timeout == 2.3.1",
    "flake8 == 7.0.0"
]
examples = [
    "ebrick_demo @ git+https://github.com/zeroasiccorp/ebrick-demo.git@767861e1b50edbc4c70a21ee8b079ac83e0303e9"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.pytest.ini_options]
testpaths = "tests"
timeout = "180"
markers = [
    "quick: always run this test on push"
]
