[build-system]
requires = [
    "setuptools >= 61.2"
]

[project]
name = "logik"
authors = [{name = "Zero ASIC"}]
description = "Logik is a light weight FPGA tool chain based on mature open source technologies."
readme = "README.md"
urls = {Homepage = "https://github.com/zeroasiccorp/logik"}
requires-python = ">= 3.8"
dependencies = [
    "siliconcompiler >= 0.25.0",
]
license = {file = "LICENSE"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "logik.__version__"}

[project.optional-dependencies]
test = [
    "pytest == 8.2.2",
    "pytest-timeout == 2.3.1",
    "flake8 == 7.1.0"
]
docs = [
    "Sphinx == 7.4.5",
    "sphinx-rtd-theme == 2.0.0",
    "autodocsumm == 0.2.12"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.pytest.ini_options]
testpaths = "tests"
timeout = "180"
markers = [
    "quick: always run this test on push"
]
